--- a/worksheet.html
+++ b/worksheet.html
@@ -880,7 +880,7 @@
         },
         {
           id: 31,
-          title: "2-Digit Addition Workout",
+          title: "2-Digit Addition Workout 2",
           img: "images/31.png",
           grades: ["1st", "2nd"],
           subjects: ["Math"],
@@ -906,7 +906,7 @@
         },
         {
           id: 33,
-          title: "4-Digit Addition Mastery",
+          title: "4-Digit Addition Mastery 2",
           img: "images/33.png",
           grades: ["2nd", "3rd", "4th"],
           subjects: ["Math"],
@@ -932,7 +932,7 @@
         },
         {
           id: 34,
-          title: "3-Digit Addition Challenge",
+          title: "3-Digit Addition Challenge 2",
           img: "images/34.png",
           grades: ["2nd", "3rd"],
           subjects: ["Math"],
@@ -996,9 +996,22 @@
           download: "#",
         },
         {
+          id: 55,
+          title: "Money Match",
+          img: "images/53.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles", "Memory Games"],
+          summary:
+            "Match coin groups to their correct value to practice counting money.",
+          description:
+            "Students count combinations of coins and match them with the correct amounts. This hands-on activity boosts money recognition, counting skills, and financial awareness in young learners.",
+          download: "#",
+        },
+        {
           id: 40,
-          title: "4-Digit Subtraction Mastery",
-          img: "images/42.png",
+          title: "4-Digit Subtraction Mastery 1",
+          img: "images/42.png", 
           grades: ["2nd", "3rd", "4th"],
           subjects: ["Math"],
           games: [],
@@ -1010,7 +1023,7 @@
         },
         {
           id: 41,
-          title: "4-Digit Subtraction Mastery",
+          title: "4-Digit Subtraction Mastery 2",
           img: "images/43.png",
           grades: ["2nd", "3rd", "4th"],
           subjects: ["Math"],
@@ -1035,6 +1048,19 @@
           download: "#",
         },
         {
+          id: 54,
+          title: "Odd Unit Subtraction",
+          img: "images/51.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Subtract unusual mixed units like feet/inches or hours/minutes.",
+          description:
+            "This worksheet challenges students to subtract using compound units such as length, time, and weight. It supports understanding of conversion and regrouping between units.",
+          download: "#",
+        },
+        {
           id: 43,
           title: "3-Digit Subtraction Challenge",
           img: "images/41.png",
@@ -1045,6 +1071,134 @@
             "Tackle 3-digit subtraction problems that boost mental math and column alignment skills.",
           description:
             "This worksheet focuses on subtracting three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
+        {
+          id: 44,
+          title: "Math in the Wild",
+          img: "images/44.png",
+          grades: ["1st", "2nd"],
+          subjects: ["Math", "Reading"],
+          games: ["Logic Riddles", "Word Puzzles"],
+          summary:
+            "Solve simple addition problems to uncover clues about a mystery animal.",
+          description:
+            "This worksheet helps students practice addition within 20 while revealing a secret animal's identity through clues. Great for building fluency and reading comprehension!",
+          download: "#",
+        },
+        {
+          id: 45,
+          title: "Basic Division Practice 1",
+          img: "images/45.png",
+          grades: ["3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice simple long division with whole numbers and small divisors.",
+          description:
+            "This worksheet introduces students to basic long division. With basic, fundamental problems, learners will build confidence dividing whole numbers and understanding remainders. A great introduction to division.",
+          download: "#",
+        },
+        {
+          id: 46,
+          title: "Basic Division Practice 2",
+          img: "images/46.png",
+          grades: ["3rd", "4th"],
+          subjects: ["Math"],
+          games: [],
+          summary:
+            "Practice simple long division with whole numbers and small divisors.",
+          description:
+            "This worksheet introduces students to basic long division. With basic, fundamental problems, learners will build confidence dividing whole numbers and understanding remainders. A great introduction to division.",
+          download: "#",
+        },
+        {
+          id: 47,
+          title: "Hard Division Practice 1",
+          img: "images/47.png",
+          grades: ["4th", "5th", "6th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Take your long division skills up a notch with 3 and 4-digit problems.",
+          description:
+            "Designed for students ready to move beyond basic division, this worksheet includes harder problems like 2301 ÷ 59. Each problem encourages multi-step thinking and careful number placement. Perfect for honing accuracy and problem-solving.",
+          download: "#",
+        },
+        {
+          id: 48,
+          title: "Hard Division Practice 2",
+          img: "images/48.png",
+          grades: ["4th", "5th", "6th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Take your long division skills up a notch with 3 and 4-digit problems.",
+          description:
+            "Designed for students ready to move beyond basic division, this worksheet includes harder problems. Each problem encourages multi-step thinking and careful number placement. Perfect for honing accuracy and problem-solving.",
+          download: "#",
+        },
+        {
+          id: 53,
+          title: "Money Subtraction",
+          img: "images/52.png",
+          grades: ["2nd", "3rd"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Practice subtracting dollar amounts with realistic money problems.",
+          description:
+            "This worksheet subtracts various dollar values to strengthen money math skills. Real-world application problems help build confidence in financial literacy and arithmetic.",
+          download: "#",
+        },
+        {
+          id: 49,
+          title: "Advanced Division Practice 1",
+          img: "images/49.png",
+          grades: ["6th", "7th", "8th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Tackle complex long division problems with large divisors and dividends.",
+          description:
+            "This worksheet pushes students to apply advanced long division techniques to large numbers. These problems will test patience, precision, and logic. A great fit for students preparing for pre-algebra or looking for a serious brain workout.",
+          download: "#",
+        },
+        {
+          id: 50,
+          title: "Advanced Division Practice 2",
+          img: "images/50.png",
+          grades: ["6th", "7th", "8th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary:
+            "Tackle complex long division problems with large divisors and dividends.",
+          description:
+            "This worksheet pushes students to apply advanced long division techniques to large numbers. These problems will test patience, precision, and logic. A great fit for students preparing for pre-algebra or looking for a serious brain workout.",
+          download: "#",
+        },
+        {
+          id: 51,
+          title: "Decimal Division Practice 1",
+          img: "images/54.png",
+          grades: ["5th", "6th", "7th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary: "Practice dividing with decimals.",
+          description:
+            "Students will learn to divide numbers with decimals, including clean results and those requiring rounding. Problems will reinforce place value understanding and accuracy.",
+          download: "#",
+        },
+        {
+          id: 52,
+          title: "Decimal Division Practice 2",
+          img: "images/55.png",
+          grades: ["5th", "6th", "7th"],
+          subjects: ["Math"],
+          games: ["Logic Riddles"],
+          summary: "Practice dividing with decimals.",
+          description:
+            "Students will learn to divide numbers with decimals, including clean results and those requiring rounding. Problems will reinforce place value understanding and accuracy.",
           download: "#",
         },
           ]);
