--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -844,6 +844,149 @@
             "Students count combinations of coins and match them with the correct amounts. This hands-on activity boosts money recognition, counting skills, and financial awareness in young learners.",
           download: "#",
         },
+        {
+          id: 56,
+          title: "Bee Maze",
+          img: "images/56.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the bumblebee find its way home through the honeycomb maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a bee back to its hive.",
+          download: "#",
+        },
+        {
+          id: 57,
+          title: "Girl Maze",
+          img: "images/57.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the little girl find her gift through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a girl to its present.",
+          download: "#",
+        },
+        {
+          id: 58,
+          title: "Frog Maze",
+          img: "images/58.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the frog find her children through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a frog back to its children.",
+          download: "#",
+        },
+        {
+          id: 59,
+          title: "Santa Christmas Maze",
+          img: "images/59.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help Santa deliver presents to the children through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide Santa to deliver presents back to their children.",
+          download: "#",
+        },
+        {
+          id: 60,
+          title: "Chicken Maze",
+          img: "images/60.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the chicken navigate back to his home through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a chicken back to its home.",
+          download: "#",
+        },    
+        {
+          id: 61,
+          title: "Bird Maze",
+          img: "images/61.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the bird navigate back to his nest through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a bird back to its nest.",
+          download: "#",
+        },       
+        {
+          id: 62,
+          title: "Santa Maze",
+          img: "images/62.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help Santa navigate back to his sleigh through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide Santa back to its sleigh.",
+          download: "#",
+        },
+        {
+          id: 63,
+          title: "Rabbit Maze",
+          img: "images/63.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a rabbit navigate back to his camp through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a rabbit back to its camp.",
+          download: "#",
+        },
+        {
+          id: 64,
+          title: "Cat Maze",
+          img: "images/64.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a cat navigate back to his house through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat back to its house.",
+          download: "#",
+        },
+        {
+          id: 65,
+          title: "Cats Maze",
+          img: "images/65.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help two cats navigate to eachother through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat to eachother.",
+          download: "#",
+        },
+        {
+          id: 66,
+          title: "Cats Maze",
+          img: "images/66.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a cat navigate to a mice through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat to mouse.",
+          download: "#",
+        },
       ];
 
       createApp({
