--- a/worksheet.html
+++ b/worksheet.html
@@ -802,6 +802,19 @@
           download: "#",
         },
         {
+          id: 59,
+          title: "Santa Christmas Maze",
+          img: "images/59.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help Santa deliver presents to the children through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide Santa to deliver presents back to their children.",
+          download: "#",
+        },
+        {
           id: 23,
           title: "Hello Multiplication",
           img: "images/23.png",
@@ -837,6 +850,19 @@
             "Boost addition confidence with a variety of fun easy addition practice problems.",
           description:
             "This worksheet has basic addition with numbers 0–10. Great for beginners learning and and practicing fundamentals through short, fun equations.",
+          download: "#",
+        },
+        {
+          id: 58,
+          title: "Frog Maze",
+          img: "images/58.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the frog find her children through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a frog back to its children.",
           download: "#",
         },
         {
@@ -879,6 +905,32 @@
           download: "#",
         },
         {
+          id: 60,
+          title: "Chicken Maze",
+          img: "images/60.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the chicken navigate back to his home through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a chicken back to its home.",
+          download: "#",
+        },
+        {
+          id: 61,
+          title: "Bird Maze",
+          img: "images/61.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the bird navigate back to his nest through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a bird back to its nest.",
+          download: "#",
+        },   
+        {
           id: 31,
           title: "2-Digit Addition Workout 2",
           img: "images/31.png",
@@ -889,6 +941,19 @@
             "Build confidence by solving 2-digit addition problems.",
           description:
             "This worksheet practices adding two-digit numbers, preparing them for more advanced math concepts. This worksheet is ideal for solidifying foundational addition skills",
+          download: "#",
+        },
+        {
+          id: 62,
+          title: "Santa Maze",
+          img: "images/62.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help Santa navigate back to his sleigh through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide Santa back to its sleigh.",
           download: "#",
         },
         {
@@ -918,6 +983,19 @@
           download: "#",
         },
         {
+          id: 63,
+          title: "Rabbit Maze",
+          img: "images/63.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a rabbit navigate back to his camp through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a rabbit back to its camp.",
+          download: "#",
+        },
+        {
           id: 34,
           title: "3-Digit Addition Challenge",
           img: "images/34.png",
@@ -931,9 +1009,22 @@
           download: "#",
         },
         {
+          id: 57,
+          title: "Girl Maze",
+          img: "images/57.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the little girl find her gift through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a girl to its present.",
+          download: "#",
+        },
+        {
           id: 34,
           title: "3-Digit Addition Challenge 2",
-          img: "images/34.png",
+          img: "images/35.png",
           grades: ["2nd", "3rd"],
           subjects: ["Math"],
           games: [],
@@ -941,6 +1032,19 @@
             "Tackle 3-digit addition problems that boost mental math and column alignment skills.",
           description:
             "This worksheet focuses on adding three-digit numbers with step-by-step practice. It’s a great way for students to learn carrying over and improve their calculation accuracy. How fast can you finish it?",
+          download: "#",
+        },
+        {
+          id: 64,
+          title: "Cat Maze",
+          img: "images/64.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a cat navigate back to his house through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat back to its house.",
           download: "#",
         },
         {
@@ -983,6 +1087,19 @@
           download: "#",
         },
         {
+          id: 56,
+          title: "Bee Maze",
+          img: "images/56.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help the bumblebee find its way home through the honeycomb maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a bee back to its hive.",
+          download: "#",
+        },
+        {
           id: 39,
           title: "2-Digit Subtraction Workout 2",
           img: "images/39.png",
@@ -1019,6 +1136,32 @@
             "Master multi-digit subtraction with 4-digit number problems that test students.",
           description:
             "This worksheet challenges kids to subtract large numbers accurately. A perfect resource for preparing for higher-level math while reinforcing strong subtraction strategies.",
+          download: "#",
+        },
+        {
+          id: 65,
+          title: "Cats Maze",
+          img: "images/65.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help two cats navigate to eachother through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat to eachother.",
+          download: "#",
+        },
+        {
+          id: 66,
+          title: "Cats Maze",
+          img: "images/66.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts"],
+          games: ["Mazes"],
+          summary:
+            "Help a cat navigate to a mice through the maze.",
+          description:
+            "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat to mouse.",
           download: "#",
         },
         {
