--- a/index.html
+++ b/index.html
@@ -331,8 +331,9 @@
                   Download hundreds of our printable worksheets, practice
                   sheets, and activities for free.
                 </p>
-                <button class="btn btn-primary">Explore</button>
-              </div>
+        <a href="services.html" class="btn btn-primary rounded-pill"
+          >Explore</a
+        >              </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6">
               <div class="feature-box text-center">
@@ -344,7 +345,9 @@
                   Resources tailored for everyone, from first letters and basic
                   addition to algebra, writing, and more.
                 </p>
-                <button class="btn btn-primary">Browse Grades</button>
+                        <a href="worksheet.html" class="btn btn-primary rounded-pill"
+          >Explore</a
+        >             
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6">
@@ -357,8 +360,9 @@
                   Stuck on a concept? We have free tutoring sessions based on
                   our worksheets for support.
                 </p>
-                <button class="btn btn-primary">Get Help</button>
-              </div>
+        <a href="tutor.html" class="btn btn-primary rounded-pill"
+          >Explore</a
+        >              </div>              
             </div>
             <div class="col-12 col-md-6 col-lg-6">
               <div class="feature-box text-center">
@@ -370,8 +374,9 @@
                   Spark learning curiosity early with fun worksheets that help
                   lay the groundwork for lifelong learning.
                 </p>
-                <button class="btn btn-primary">See Activities</button>
-              </div>
+        <a href="worksheet.html" class="btn btn-primary rounded-pill"
+          >Explore</a
+        >              </div>              </div>
             </div>
           </div>
         </div>
@@ -438,9 +443,9 @@
           <p class="mb-4">
             No money or commitments, just free accessable learning made easy.
           </p>
-          <button class="btn btn-primary rounded-pill" @click="openModal">
-            Access our Free Resoruces
-          </button>
+        <a href="worksheet.html" class="btn btn-primary rounded-pill"
+          >Access Our Free Resources</a
+        >              </div>
         </div>
       </section>
 
