--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -987,6 +987,188 @@
             "This fun and engaging maze worksheet helps young learners develop their skills as they guide a cat to mouse.",
           download: "#",
         },
+        {
+          id: 67,
+          title: "Santa Connect the Dots",
+          img: "images/67.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 34 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 34. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 68,
+          title: "Christmas Connect the Dots",
+          img: "images/68.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 18 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 18. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 69,
+          title: "Penguin Connect the Dots",
+          img: "images/69.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 33 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 33. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 70,
+          title: "Bus Connect the Dots",
+          img: "images/70.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 38 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 38. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 71,
+          title: "Train Connect the Dots",
+          img: "images/71.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 40 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 40. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 72,
+          title: "Sailboat Connect the Dots",
+          img: "images/72.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 33 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 33. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 73,
+          title: "Dinosaur Connect the Dots",
+          img: "images/73.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 112 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 112. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 74,
+          title: "Flowerpot Connect the Dots",
+          img: "images/74.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 72 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 72. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 75,
+          title: "Squid Connect the Dots",
+          img: "images/75.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 92 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 92. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 76,
+          title: "Frog Connect the Dots",
+          img: "images/76.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 97 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 97. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 77,
+          title: "Stork Connect the Dots",
+          img: "images/77.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 80 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 80. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 78,
+          title: "Monkey Connect the Dots",
+          img: "images/78.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 89 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 89. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 79,
+          title: "Catepillar Connect the Dots",
+          img: "images/79.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 86 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 86. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 80,
+          title: "Dinosaur Connect the Dots",
+          img: "images/80.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 59 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 59. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
       ];
 
       createApp({
