--- a/services.html
+++ b/services.html
@@ -461,7 +461,7 @@
           Whether it's mastering basic addition or diving into algebra, we pair practice sheets with interactive
            lessons, to help reinforce learning..
         </p>
-        <a href="index.html#sessions" class="btn btn-primary rounded-pill">
+        <a href="tutor.html" class="btn btn-primary rounded-pill">
           Book a Session
         </a>
       </div>
