--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -1169,6 +1169,318 @@
             "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 59. And as they draw, they'll see a charming and cute illustration.",
           download: "#",
         },
+        {
+          id: 81,
+          title: "Word Search",
+          img: "images/81.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },    
+        {
+          id: 82,
+          title: "Word Search",
+          img: "images/82.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 83,
+          title: "Word Search",
+          img: "images/83.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },    
+        {
+          id: 84,
+          title: "Word Search",
+          img: "images/84.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th", "5th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },  
+        {
+          id: 85,
+          title: "Word Search",
+          img: "images/85.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd","4th", "5th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        }, 
+        {
+          id: 86,
+          title: "Word Search",
+          img: "images/86.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd","4th", "5th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        }, 
+        {
+          id: 87,
+          title: "Word Search",
+          img: "images/87.png",
+          grades: ["5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 88,
+          title: "Word Search",
+          img: "images/88.png",
+          grades: ["5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 89,
+          title: "Word Search",
+          img: "images/89.png",
+          grades: ["5th", "6th", "7th", "8th"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 90,
+          title: "Word Search",
+          img: "images/90.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 91,
+          title: "Word Search",
+          img: "images/91.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 92,
+          title: "Word Search",
+          img: "images/92.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd"],
+          subjects: ["Social Studies", "Reading", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these social studies topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to social studies. Helps to reinforce spelling, reading, and social studies concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 93,
+          title: "Technology Word Search",
+          img: "images/93.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 94,
+          title: "Technology Word Search",
+          img: "images/94.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 95,
+          title: "Technology Word Search",
+          img: "images/95.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 96,
+          title: "Technology Word Search",
+          img: "images/96.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 97,
+          title: "Technology Word Search",
+          img: "images/97.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 98,
+          title: "Technology Word Search",
+          img: "images/98.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 98,
+          title: "Technology Word Search",
+          img: "images/98.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 99,
+          title: "Technology Word Search",
+          img: "images/99.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 100,
+          title: "Technology Word Search",
+          img: "images/100.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 101,
+          title: "Technology Word Search",
+          img: "images/100.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 102,
+          title: "Technology Word Search",
+          img: "images/100.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
+        {
+          id: 103,
+          title: "Technology Word Search",
+          img: "images/100.png",
+          grades: ["4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Reading", "Engineering", "Arts"],
+          games: ["Word Search", "Word Puzzles"],
+          summary:
+            "Find hidden words related to these technology and engineering topics in this word search.",
+          description:
+    "This worksheet challenges young learners to find and identify vocabulary words related to technology and engineering. Helps to reinforce spelling, reading, technology and engineering concepts while helping develop pattern recognition skills.",
+          download: "#",
+        },
       ];
 
       createApp({
